2006-08-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: Fix the entry for the ATtiny2313, the revision
	I datasheet was indeed correct.

2006-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add the new "asmdemo" example.  It demonstrates how C and assembly
	source files could be used within one project.
	* doc/examples/asmdemo: (New directory.)
	* doc/examples/asmdemo/asmdemo.c: (New file.) asmdemo implementation.
	* doc/examples/asmdemo/isrs.S: (Ditto.)
	* doc/examples/asmdemo/project.h: (Ditto.)
	* doc/examples/asmdemo/Makefile: (Ditto.)
	* doc/examples/asmdemo/asmdemo.dox: (New file.) Document the asmdemo.
	* doc/examples/Makefile.am: Wire the asmdemo into the build and
	distribution process.
	* doc/examples/all-demos.dox: Add a paragraph about the purpose of

2006-08-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Catch binutils 2.17 flagging
	an error for the empty .eeprom section.
	* doc/examples/demo/demo.dox: Explain binutils 2.17's
	changed behaviour in avr-objcopy when trying to copy an
	empty .eeprom section.

2006-08-18 Eric B. Weddington <eweddington@cso.atmel.com>

	* include/avr/power.h: New file. Provides a Power Management API.
	* include/avr/sleep.h: Fix grammar errors in doxygen comment.
	* NEWS: New Power Management API.

2006-08-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fixes to the HD44780 driver; thanks to Knut Schwichtenberg
	for pointing this out, and helping in testing it.
	* doc/examples/stdiodemo/hd44780.c: Fix timing issues.  The
	values read back from the HD44780 need to be sampled while
	E is asserted.
	* doc/examples/stdiodemo/stdiodemo.dox: Document the new
	approach of the E pulse generation.

2006-07-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_spman): New entry about the SP manipulation
	in function prologues/epilogues.

2006-07-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Guohui Wang <info@Atmanecl.net>: