@@ -6,6 +6,7 @@
   [no-id]  Make include/avr/eeprom.h -Wundef safe.
   [no-id]  Fix the timing of the HD44780 driver in the stdiodemo.
   [#16434] EMPTY_INTERRUPT has no misspelled vector checking
+  [#16411] Add 'used' and 'externally_visible' attributes to all ISR macros.
   [#16441] eeprom.h should use __asm__
   [#17068] wdt.h file: __AVR_ATmeg324P__ spelling mistake
 
